[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/player_mask.png" type="Texture" id=1]
[ext_resource path="res://assets/body.png" type="Texture" id=2]
[ext_resource path="res://scenes/player.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 2.5 )

[node name="player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )

[node name="player_body" type="Sprite" parent="."]
self_modulate = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
position = Vector2( -0.5, 3 )
scale = Vector2( 0.986111, 1 )
texture = ExtResource( 2 )
hframes = 8
vframes = 7
frame = 3

[node name="player_mask" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2.5 )
scale = Vector2( 0.75, 1 )
shape = SubResource( 1 )

[node name="ground_casts" type="Node2D" parent="."]
visible = false

[node name="ground_cast1" type="RayCast2D" parent="ground_casts"]
position = Vector2( -1.5, 5 )
scale = Vector2( 3, 3 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="ground_cast2" type="RayCast2D" parent="ground_casts"]
position = Vector2( 1.5, 5 )
scale = Vector2( 3, 3 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="ground_cast3" type="RayCast2D" parent="ground_casts"]
position = Vector2( 0, 5 )
scale = Vector2( 3, 3 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="timers" type="Node2D" parent="."]

[node name="jump_time" type="Timer" parent="timers"]
one_shot = true
